@@ -197,4 +197,27 @@ public class ThirdsController implements ThirdsApi {
         return getState(request, response, thirdName, processName, stateName, apiVersion)
                 .getDetails();
     }
+
+	@Override
+	public Void deleteBundle(HttpServletRequest request, HttpServletResponse response, String thirdName)
+			throws Exception {
+		try {
+			service.delete(thirdName);
+			// leaving response body empty
+			response.setStatus(204);
+			return null;
+		} catch (FileNotFoundException e) {
+			log.error("Bundle directory not found when wanted to delete bundle", e);
+			throw new ApiErrorException(ApiError.builder().status(HttpStatus.NOT_FOUND)
+					.message("Bundle not found").error(e.getMessage()).build(),
+					"Bundle directory not found", e);
+		} catch (IOException e) {
+			log.error("IOException while deleting bundle directory", e);
+			throw new ApiErrorException(ApiError.builder().status(HttpStatus.INTERNAL_SERVER_ERROR)
+					.message("unable to delete submitted bundle").error(e.getMessage()).build(),
+					"IOException while deleting bundle directory", e);
+		}
+	}
+    
+    
 }
